update htaccess redirect

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,6 @@
  REWRITEENGINE ON
-    #for app in subdirectory
-    RewriteBase /play-lofi/
-    RewriteRule ^index\.html$ - [L]
+    RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-l
-    RewriteRule ^.*play-lofi/.* /play-lofi/index.html [L]
+    RewriteRule . /index.html [L]
